<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/costAnnotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingLeft="@dimen/textViews_left_padding"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/costAnnotation" />

    <EditText
        android:id="@+id/costField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/costAnnotation"
        android:hint="@string/costHint"
        android:inputType="number"
        android:singleLine="true" />

    <TextView
        android:id="@+id/placeAnnotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/costField"
        android:paddingLeft="@dimen/textViews_left_padding"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/placeAnnotation" />

    <EditText
        android:id="@+id/placeField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/placeAnnotation"
        android:hint="@string/placeHint"
        android:singleLine="true" />

    <TextView
        android:id="@+id/purchaseTypeAnnotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/placeField"
        android:paddingLeft="@dimen/textViews_left_padding"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/purchaseTypeAnnotation" />

    <Spinner
        android:id="@+id/purchaseTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/purchaseTypeAnnotation"
        android:entries="@array/purchaseTypes" />

    <TextView
        android:id="@+id/purchaseNameAnnotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/purchaseTypeSpinner"
        android:paddingLeft="@dimen/textViews_left_padding"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/purchaseNameAnnotation" />

    <EditText
        android:id="@+id/purchaseNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/purchaseNameAnnotation"
        android:hint="@string/purchaseNameHint"
        android:singleLine="true" />

    <TextView
        android:id="@+id/purchaseDateAnnotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/purchaseNameField"
        android:paddingLeft="@dimen/textViews_left_padding"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/purchaseDateAnnotation" />

    <EditText
        android:id="@+id/purchaseDateField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/purchaseDateAnnotation"
        android:cursorVisible="false"
        android:hint="@string/purchaseDateHint"
        android:inputType="none"
        android:longClickable="false" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/saveButton" />


</RelativeLayout>